--- a/dl1.ipynb
+++ b/dl1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPULPS2qjhTJvpd0vCR+WUa",
+      "authorship_tag": "ABX9TyNDIaVuf+H/onKMXyPvhZAI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "j7MvnGQqJaGn"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         },
         "outputId": "cf29ea6d-a75a-40e8-c4eb-0c9531dfb18a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -86,9 +86,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XXp8sa-6J0Vl",
-        "outputId": "3c9194c2-305c-4603-93fe-b39b54a9e1bd"
+        "outputId": "3c9194c2-305c-4603-93fe-b39b54a9e1bd",
+        "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,9 +725,560 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "my_list=[1,2,3,4,5]\n",
+        "my_list"
+      ],
+      "metadata": {
+        "id": "Pi-VarvOKXnK",
+        "outputId": "b970f542-1193-4f90-8a46-c563e7796d08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "Sq10DdD4M1T2"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np1= np.random.rand(3,4)\n",
+        "np1"
+      ],
+      "metadata": {
+        "id": "obpugFmCNLa4",
+        "outputId": "1062694e-e980-45b4-b14c-d8f316d95584",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.533723  , 0.27823859, 0.62566673, 0.61508261],\n",
+              "       [0.79786822, 0.60867755, 0.01644017, 0.87804477],\n",
+              "       [0.54184496, 0.65218279, 0.33003776, 0.66948227]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np1.dtype"
+      ],
+      "metadata": {
+        "id": "7dVQg5_KNRKW",
+        "outputId": "57dddff8-3053-4acb-a6d7-c23d65d5183e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_2d=torch.randn(3,4)\n",
+        "tensor_2d\n",
+        "tensor_2d.dtype"
+      ],
+      "metadata": {
+        "id": "cHBwDUPfNWv-",
+        "outputId": "0d930455-5204-4d49-c045-37986f9e4fd1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_3d=torch.zeros(3,4)\n",
+        "tensor_3d"
+      ],
+      "metadata": {
+        "id": "B4-bAjvONiBO",
+        "outputId": "95ad2fb7-82ae-4b5b-a9a2-be19800fdb68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_tensor=torch.tensor(np1)\n",
+        "my_tensor"
+      ],
+      "metadata": {
+        "id": "bt0ZQhyWNtcH",
+        "outputId": "272ab9e9-07b3-41ab-eaa7-fe21378b4b47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5337, 0.2782, 0.6257, 0.6151],\n",
+              "        [0.7979, 0.6087, 0.0164, 0.8780],\n",
+              "        [0.5418, 0.6522, 0.3300, 0.6695]], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch=torch.arange(10)\n",
+        "my_torch"
+      ],
+      "metadata": {
+        "id": "oJQiPTwoN3bm",
+        "outputId": "3ce8ee9b-5de6-477a-9001-9032c43814b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch=my_torch.reshape(2,5)\n",
+        "my_torch"
+      ],
+      "metadata": {
+        "id": "7QNNV6koOnur",
+        "outputId": "bfc6bebe-40fd-4484-b9a5-c4ba4e5de81d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch2=torch.arange(10)\n",
+        "my_torch2"
+      ],
+      "metadata": {
+        "id": "u_1_FHG-OxSr",
+        "outputId": "90b26841-8615-41a1-8afe-22e9134596c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch2=my_torch2.reshape(-1,5)\n",
+        "my_torch2"
+      ],
+      "metadata": {
+        "id": "My8TnKg3O4H-",
+        "outputId": "8e50e594-8651-4870-9a80-070f9e283e41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mytorch4=my_torch.view(2,5)\n",
+        "my_torch"
+      ],
+      "metadata": {
+        "id": "uTosb-14PF0W",
+        "outputId": "fe2cdeaa-ba40-4f5d-d2e1-62c1ce4b076b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch5=torch.arange(10)\n",
+        "my_torch5"
+      ],
+      "metadata": {
+        "id": "QdpqhlKsPbx5",
+        "outputId": "87bcc9f4-4fe7-4473-fcdf-43a8d1a3afc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch6=my_torch5.reshape(2,5)\n",
+        "my_torch6"
+      ],
+      "metadata": {
+        "id": "_mOHnPq_Plot",
+        "outputId": "bbe240ea-0fc9-4f9f-dffd-5469aa7a6557",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1, 2, 3, 4],\n",
+              "        [5, 6, 7, 8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch5[1]=4141\n",
+        "my_torch5"
+      ],
+      "metadata": {
+        "id": "9thlR2l2PtCT",
+        "outputId": "3dcb84f0-a9bc-4a0a-e36f-e0c58c4cd27e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([   0, 4141,    2,    3,    4,    5,    6,    7,    8,    9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch6[1]=4141"
+      ],
+      "metadata": {
+        "id": "0isyQau6P1_Z"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch6"
+      ],
+      "metadata": {
+        "id": "WO4omxJTQAe-",
+        "outputId": "59ebe403-ed3f-4ea4-e6b8-c3047332a0da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[   0, 4141,    2,    3,    4],\n",
+              "        [   5,    6,    7,    8,    9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch7=torch.arange(10)\n",
+        "my_torch7"
+      ],
+      "metadata": {
+        "id": "5QpspCvsQBlS",
+        "outputId": "353eab3b-d85e-45ac-9cd5-de374de2025e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch7[7]"
+      ],
+      "metadata": {
+        "id": "i1LuHiggQVaJ",
+        "outputId": "404ff262-34fb-466d-cadf-012290fad1c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch8=my_torch.reshape(5,2)\n",
+        "my_torch8"
+      ],
+      "metadata": {
+        "id": "Z6E4aPKuQZ9V",
+        "outputId": "62d48e35-f7ec-4482-e6bb-0518ff0e78c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1],\n",
+              "        [2, 3],\n",
+              "        [4, 5],\n",
+              "        [6, 7],\n",
+              "        [8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_torch8[:,1:]"
+      ],
+      "metadata": {
+        "id": "PltOqOfLQ0k_",
+        "outputId": "90bc60d1-aed3-489e-e087-6286ec7d4975",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1],\n",
+              "        [3],\n",
+              "        [5],\n",
+              "        [7],\n",
+              "        [9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Pi-VarvOKXnK"
+        "id": "m2Dx0ZcGQ3p1"
       },
       "execution_count": null,
       "outputs": []
